syntax = "proto3";

package com.intellistart.interviewplanning.request.slot.update.proto;

option java_multiple_files = true;

import "com/intellistart/interviewplanning/commonmodels/slot/slot.proto";
import "com/intellistart/interviewplanning/commonmodels/error/error.proto";

message UpdateSlotRequest {
  string slotId = 1;
  commonmodels.slot.Slot slot = 2;
  string email = 3;
}

message UpdateSlotResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.slot.Slot slot = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      commonmodels.error.Error slot_is_booked = 1;
      commonmodels.error.Error invalid_boundaries = 2;
      commonmodels.error.Error slot_not_found = 3;
      commonmodels.error.Error slot_is_overlapping = 4;
      commonmodels.error.Error slot_is_in_the_past = 5;
      commonmodels.error.Error user_not_found = 6;
    }
  }
}
