package intellistart.interviewplanning.grpc.slot_service;

import "intellistart/interviewplanning/input/reqreply/slot/stream_by_slot_id.proto";

service SlotService {
    rpc streamBySlotId (request.slot.stream_by_slot_id.StreamBySlotIdRequest)
        returns (stream request.slot.stream_by_slot_id.StreamBySlotIdResponse);
}
